--- a/获取城市.md
+++ b/获取城市.md
@@ -1,9 +1,15 @@
-tips:每次最多只会返回100条记录，支持分页查询
+tips:每次最多只会返回100条记录，支持分页查询:
 
-# 查询条件
-按省份查询
-按城市查询
-按区查询
+# 请求地址
+
+  https://service.nonedb.com/nonedb_data/city/find
+
+# 开发参数
+  
+  key：0
+  user：reader
+  
+# 
 
 # 查询全部
 
