--- a/获取城市.md
+++ b/获取城市.md
@@ -16,7 +16,7 @@ tips:每次最多只会返回100条记录，支持分页查询:
 
 按省份查询：where={"province":"陕西省"}
 
-按城市查询：where={"province":"西安市"}
+按城市查询：where={"city":"西安市"}
 
 # 签名
 sha1(timestamp=1&where={}&key=1)
@@ -63,4 +63,22 @@ curl https://service.nonedb.com/nonedb_data/city/find -X POST -d '{"where": {"pr
 
 ```
 {"data":[{"_id":"5eba104288e95627eac65811","city":"铜川市","district":"宜君县","province":"陕西省"},{"_id":"5eba104288e95627eac65953","city":"宝鸡市","district":"金台区","province":"陕西省"},{"_id":"5eba104288e95627eac65988","city":"渭南市","district":"富平县","province":"陕西省"},{"_id":"5eba104288e95627eac65999","city":"渭南市","district":"韩城市","province":"陕西省"},{"_id":"5eba104288e95627eac6599b","city":"汉中市","district":"勉县","province":"陕西省"},{"_id":"5eba104288e95627eac6599d","city":"延安市","district":"宝塔区","province":"陕西省"},{"_id":"5eba104288e95627eac659a0","city":"汉中市","district":"西乡县","province":"陕西省"},{"_id":"5eba104288e95627eac659c3","city":"安康市","district":"镇坪县","province":"陕西省"},{"_id":"5eba104388e95627eac65b3c","city":"咸阳市","district":"旬邑县","province":"陕西省"},{"_id":"5eba104488e95627eac660bf","city":"西安市","district":"灞桥区","province":"陕西省"},{"_id":"5eba104488e95627eac66106","city":"铜川市","district":"耀州区","province":"陕西省"},{"_id":"5eba104488e95627eac66147","city":"宝鸡市","district":"陈仓区","province":"陕西省"},{"_id":"5eba104488e95627eac66172","city":"铜川市","district":"印台区","province":"陕西省"},{"_id":"5eba104488e95627eac661b3","city":"咸阳市","district":"彬县","province":"陕西省"},{"_id":"5eba104488e95627eac661cd","city":"渭南市","district":"白水县","province":"陕西省"},{"_id":"5eba104488e95627eac661cf","city":"咸阳市","district":"渭城区","province":"陕西省"},{"_id":"5eba104488e95627eac661d1","city":"延安市","district":"黄陵县","province":"陕西省"},{"_id":"5eba104488e95627eac661df","city":"铜川市","district":"王益区","province":"陕西省"},{"_id":"5eba104488e95627eac661e9","city":"渭南市","district":"合阳县","province":"陕西省"},{"_id":"5eba104488e95627eac661f7","city":"延安市","district":"安塞区","province":"陕西省"},{"_id":"5eba104488e95627eac661f9","city":"宝鸡市","district":"凤县","province":"陕西省"},{"_id":"5eba104488e95627eac6621b","city":"渭南市","district":"临渭区","province":"陕西省"},{"_id":"5eba104488e95627eac66223","city":"延安市","district":"子长县","province":"陕西省"},{"_id":"5eba104488e95627eac6623d","city":"渭南市","district":"潼关县","province":"陕西省"},{"_id":"5eba104488e95627eac6624e","city":"渭南市","district":"华州区","province":"陕西省"},{"_id":"5eba104488e95627eac66250","city":"咸阳市","district":"武功县","province":"陕西省"},{"_id":"5eba104488e95627eac66254","city":"咸阳市","district":"乾县","province":"陕西省"},{"_id":"5eba104488e95627eac66261","city":"宝鸡市","district":"凤翔县","province":"陕西省"},{"_id":"5eba104488e95627eac66263","city":"咸阳市","district":"礼泉县","province":"陕西省"},{"_id":"5eba104488e95627eac6626c","city":"延安市","district":"延长县","province":"陕西省"},{"_id":"5eba104488e95627eac66294","city":"宝鸡市","district":"扶风县","province":"陕西省"},{"_id":"5eba104488e95627eac662ee","city":"渭南市","district":"大荔县","province":"陕西省"},{"_id":"5eba104488e95627eac66355","city":"西安市","district":"高陵区","province":"陕西省"},{"_id":"5eba104588e95627eac664ab","city":"商洛市","district":"洛南县","province":"陕西省"},{"_id":"5eba104588e95627eac664b1","city":"商洛市","district":"柞水县","province":"陕西省"},{"_id":"5eba104588e95627eac664e0","city":"商洛市","district":"商南县","province":"陕西省"},{"_id":"5eba104588e95627eac664fb","city":"商洛市","district":"山阳县","province":"陕西省"},{"_id":"5eba104588e95627eac665a9","city":"商洛市","district":"镇安县","province":"陕西省"},{"_id":"5eba104588e95627eac666a1","city":"宝鸡市","district":"眉县","province":"陕西省"},{"_id":"5eba104588e95627eac666a9","city":"榆林市","district":"米脂县","province":"陕西省"},{"_id":"5eba104588e95627eac666af","city":"榆林市","district":"靖边县","province":"陕西省"},{"_id":"5eba104588e95627eac666b2","city":"榆林市","district":"子洲县","province":"陕西省"},{"_id":"5eba104588e95627eac666b4","city":"汉中市","district":"镇巴县","province":"陕西省"},{"_id":"5eba104588e95627eac666c7","city":"汉中市","district":"佛坪县","province":"陕西省"},{"_id":"5eba104588e95627eac66711","city":"汉中市","district":"留坝县","province":"陕西省"},{"_id":"5eba104588e95627eac66716","city":"榆林市","district":"榆阳区","province":"陕西省"},{"_id":"5eba104588e95627eac66744","city":"安康市","district":"石泉县","province":"陕西省"},{"_id":"5eba104588e95627eac66749","city":"商洛市","district":"丹凤县","province":"陕西省"},{"_id":"5eba104688e95627eac66a04","city":"咸阳市","district":"永寿县","province":"陕西省"},{"_id":"5eba104688e95627eac66a0a","city":"咸阳市","district":"秦都区","province":"陕西省"},{"_id":"5eba104688e95627eac66a92","city":"安康市","district":"白河县","province":"陕西省"},{"_id":"5eba104688e95627eac66a94","city":"榆林市","district":"神木市","province":"陕西省"},{"_id":"5eba104688e95627eac66a9c","city":"榆林市","district":"清涧县","province":"陕西省"},{"_id":"5eba104688e95627eac66a9f","city":"榆林市","district":"佳县","province":"陕西省"},{"_id":"5eba104688e95627eac66aa1","city":"安康市","district":"紫阳县","province":"陕西省"},{"_id":"5eba104688e95627eac66b46","city":"西安市","district":"蓝田县","province":"陕西省"},{"_id":"5eba104688e95627eac66b49","city":"西安市","district":"阎良区","province":"陕西省"},{"_id":"5eba104688e95627eac66b53","city":"西安市","district":"雁塔区","province":"陕西省"},{"_id":"5eba104688e95627eac66b6f","city":"西安市","district":"临潼区","province":"陕西省"},{"_id":"5eba104688e95627eac66c55","city":"延安市","district":"甘泉县","province":"陕西省"},{"_id":"5eba104688e95627eac66c72","city":"西安市","district":"长安区","province":"陕西省"},{"_id":"5eba104688e95627eac66cca","city":"咸阳市","district":"三原县","province":"陕西省"},{"_id":"5eba104688e95627eac66cdf","city":"汉中市","district":"城固县","province":"陕西省"},{"_id":"5eba104688e95627eac66ce5","city":"安康市","district":"岚皋县","province":"陕西省"},{"_id":"5eba104688e95627eac66d2f","city":"安康市","district":"旬阳县","province":"陕西省"},{"_id":"5eba104688e95627eac66d5b","city":"西安市","district":"周至县","province":"陕西省"},{"_id":"5eba104788e95627eac66dba","city":"安康市","district":"宁陕县","province":"陕西省"},{"_id":"5eba104788e95627eac66ddb","city":"西安市","district":"鄠邑区","province":"陕西省"},{"_id":"5eba104788e95627eac66ecb","city":"咸阳市","district":"泾阳县","province":"陕西省"},{"_id":"5eba104788e95627eac66f71","city":"汉中市","district":"南郑区","province":"陕西省"},{"_id":"5eba104788e95627eac67019","city":"榆林市","district":"吴堡县","province":"陕西省"},{"_id":"5eba104888e95627eac67324","city":"宝鸡市","district":"岐山县","province":"陕西省"},{"_id":"5eba104888e95627eac67331","city":"安康市","district":"汉阴县","province":"陕西省"},{"_id":"5eba104888e95627eac67425","city":"咸阳市","district":"淳化县","province":"陕西省"},{"_id":"5eba104888e95627eac6745c","city":"咸阳市","district":"兴平市","province":"陕西省"},{"_id":"5eba104988e95627eac6762e","city":"宝鸡市","district":"太白县","province":"陕西省"},{"_id":"5eba104988e95627eac67751","city":"宝鸡市","district":"麟游县","province":"陕西省"},{"_id":"5eba104988e95627eac677b3","city":"西安市","district":"碑林区","province":"陕西省"},{"_id":"5eba104988e95627eac6780c","city":"西安市","district":"未央区","province":"陕西省"},{"_id":"5eba104988e95627eac67831","city":"西安市","district":"莲湖区","province":"陕西省"},{"_id":"5eba104988e95627eac67849","city":"延安市","district":"志丹县","province":"陕西省"},{"_id":"5eba104988e95627eac6784f","city":"汉中市","district":"宁强县","province":"陕西省"},{"_id":"5eba104988e95627eac6785c","city":"延安市","district":"吴起县","province":"陕西省"},{"_id":"5eba104988e95627eac6785f","city":"西安市","district":"新城区","province":"陕西省"},{"_id":"5eba104988e95627eac6786a","city":"汉中市","district":"汉台区","province":"陕西省"},{"_id":"5eba104988e95627eac6789b","city":"安康市","district":"平利县","province":"陕西省"},{"_id":"5eba104988e95627eac678bc","city":"延安市","district":"富县","province":"陕西省"},{"_id":"5eba104988e95627eac678be","city":"汉中市","district":"洋县","province":"陕西省"},{"_id":"5eba104a88e95627eac67ada","city":"榆林市","district":"横山区","province":"陕西省"},{"_id":"5eba104a88e95627eac67b04","city":"榆林市","district":"府谷县","province":"陕西省"},{"_id":"5eba104a88e95627eac67b88","city":"渭南市","district":"澄城县","province":"陕西省"},{"_id":"5eba104a88e95627eac67b94","city":"延安市","district":"延川县","province":"陕西省"},{"_id":"5eba104a88e95627eac67ba3","city":"延安市","district":"黄龙县","province":"陕西省"},{"_id":"5eba104a88e95627eac67bbe","city":"宝鸡市","district":"千阳县","province":"陕西省"},{"_id":"5eba104a88e95627eac67bc0","city":"咸阳市","district":"杨陵区","province":"陕西省"},{"_id":"5eba104a88e95627eac67bc5","city":"咸阳市","district":"长武县","province":"陕西省"},{"_id":"5eba104a88e95627eac67bc7","city":"宝鸡市","district":"渭滨区","province":"陕西省"},{"_id":"5eba104a88e95627eac67bdb","city":"宝鸡市","district":"陇县","province":"陕西省"},{"_id":"5eba104a88e95627eac67c57","city":"延安市","district":"洛川县","province":"陕西省"},{"_id":"5eba104a88e95627eac67c59","city":"延安市","district":"宜川县","province":"陕西省"}],"result_code":"success","result_des":"查找成功"}
+```
+
+
+# 按照城市查询
+
+查询条件：where={"city":"西安市"}
+
+签名：sing=sha1(timestamp=1&where={"city":"西安市"}&key=1)
+
+
+
+```
+curl https://service.nonedb.com/nonedb_data/city/find -X POST -d '{"where": {"city":"西安市"},"timestamp":1,"sign":"7b73713641a18063726815ecfcc18e2e1d6e4c5d"}' --header "Content-Type: application/json" --header "user:reader" 
+
+```
+
+```
+{"data":[{"_id":"5eba104488e95627eac660bf","city":"西安市","district":"灞桥区","province":"陕西省"},{"_id":"5eba104488e95627eac66355","city":"西安市","district":"高陵区","province":"陕西省"},{"_id":"5eba104688e95627eac66b46","city":"西安市","district":"蓝田县","province":"陕西省"},{"_id":"5eba104688e95627eac66b49","city":"西安市","district":"阎良区","province":"陕西省"},{"_id":"5eba104688e95627eac66b53","city":"西安市","district":"雁塔区","province":"陕西省"},{"_id":"5eba104688e95627eac66b6f","city":"西安市","district":"临潼区","province":"陕西省"},{"_id":"5eba104688e95627eac66c72","city":"西安市","district":"长安区","province":"陕西省"},{"_id":"5eba104688e95627eac66d5b","city":"西安市","district":"周至县","province":"陕西省"},{"_id":"5eba104788e95627eac66ddb","city":"西安市","district":"鄠邑区","province":"陕西省"},{"_id":"5eba104988e95627eac677b3","city":"西安市","district":"碑林区","province":"陕西省"},{"_id":"5eba104988e95627eac6780c","city":"西安市","district":"未央区","province":"陕西省"},{"_id":"5eba104988e95627eac67831","city":"西安市","district":"莲湖区","province":"陕西省"},{"_id":"5eba104988e95627eac6785f","city":"西安市","district":"新城区","province":"陕西省"}],"result_code":"success","result_des":"查找成功"}
 ```
