--- a/获取城市.md
+++ b/获取城市.md
@@ -28,7 +28,7 @@ sha1(timestamp=1&where={}&key=1)
 
 查询条件：where={}
 
-签名：sing=sha1(timestamp=1&where={}&key=1)
+签名：sign=sha1(timestamp=1&where={}&key=1)
 
 ```curl https://service.nonedb.com/nonedb_data/city/find -X POST -d '{"where": {},"timestamp":1,"sign":"e7cebd0027b385eabc1c91c71123afc2c96dfb74"}' --header "Content-Type: application/json" --header "user:reader"```
 
@@ -52,7 +52,7 @@ sha1(timestamp=1&where={}&key=1)
 
 查询条件：where={"province":"陕西省"}
 
-签名：sing=sha1(timestamp=1&where={"province":"陕西省"}&key=1)
+签名：sign=sha1(timestamp=1&where={"province":"陕西省"}&key=1)
 
 
 
@@ -70,7 +70,7 @@ curl https://service.nonedb.com/nonedb_data/city/find -X POST -d '{"where": {"pr
 
 查询条件：where={"city":"西安市"}
 
-签名：sing=sha1(timestamp=1&where={"city":"西安市"}&key=1)
+签名：sign=sha1(timestamp=1&where={"city":"西安市"}&key=1)
 
 
 
