--- a/获取城市.md
+++ b/获取城市.md
@@ -30,9 +30,11 @@ sha1(timestamp=1&where={}&key=1)
 
 签名：sign=sha1(timestamp=1&where={}&key=1)
 
-```curl https://service.nonedb.com/nonedb_data/city/find -X POST -d '{"where": {},"timestamp":1,"sign":"e7cebd0027b385eabc1c91c71123afc2c96dfb74"}' --header "Content-Type: application/json" --header "user:reader"```
+```
+curl https://service.nonedb.com/nonedb_data/city/find -X POST -d '{"where": {},"timestamp":1,"sign":"e7cebd0027b385eabc1c91c71123afc2c96dfb74"}' --header "Content-Type: application/json" --header "user:reader"
+```
 
-
+```
 {"data":[{"_id":"5eba103a88e95627eac649f6","city":"北京市区","district":"怀柔区","province":"北京市"},{"_id":"5eba103a88e95627eac649f8","city":"天津市区","district":"河东区","province":"天津市"},{"_id":"5eba103a88e95627eac64a00","city":"北京市区","district":"西城区","province":"北京市"},{"_id":"5eba103a88e95627eac64a15","city":"北京市区","district":"门头沟区","province":"北京市"},{"_id":"5eba103a88e95627eac64a42","city":"天津市区","district":"北辰区","province":"天津市"},{"_id":"5eba103a88e95627eac64a56","city":"北京市区","district":"通州区","province":"北京市"},{"_id":"5eba103a88e95627eac64a61","city":"北京市区","district":"密云区","province":"北京市"},{"_id":"5eba103a88e95627eac64a67","city":"石家庄市","district":"长安区","province":"河北省"},{"_id":"5eba103a88e95627eac64a6b","city":"北京市区","district":"平谷区","province":"北京市"},{"_id":"5eba103a88e95627eac64a6d","city":"北京市区","district":"房山区","province":"北京市"},{"_id":"5eba103a88e95627eac64a71","city":"石家庄市","district":"桥西区","province":"河北省"},{"_id":"5eba103a88e95627eac64a74","city":"天津市区","district":"河北区","province":"天津市"},{"_id":"5eba103a88e95627eac64a77","city":"天津市区","district":"西青区","province":"天津市"},{"_id":"5eba103a88e95627eac64a7a","city":"天津市区","district":"宝坻区","province":"天津市"},{"_id":"5eba103a88e95627eac64a7f","city":"北京市区","district":"昌平区","province":"北京市"},{"_id":"5eba103a88e95627eac64a81","city":"北京市区","district":"朝阳区","province":"北京市"},{"_id":"5eba103a88e95627eac64a83","city":"天津市区","district":"宁河区","province":"天津市"},{"_id":"5eba103a88e95627eac64a86","city":"天津市区","district":"津南区","province":"天津市"},{"_id":"5eba103a88e95627eac64a88","city":"北京市区","district":"石景山区","province":"北京市"},{"_id":"5eba103a88e95627eac64a8a","city":"天津市区","district":"蓟州区","province":"天津市"},{"_id":"5eba103a88e95627eac64a8d","city":"天津市区","district":"河西区","province":"天津市"},{"_id":"5eba103a88e95627eac64a91","city":"北京市区","district":"延庆区","province":"北京市"},{"_id":"5eba103a88e95627eac64aa6","city":"北京市区","district":"顺义区","province":"北京市"},{"_id":"5eba103a88e95627eac64aaa","city":"北京市区","district":"海淀区","province":"北京市"},{"_id":"5eba103a88e95627eac64aae","city":"北京市区","district":"丰台区","province":"北京市"},{"_id":"5eba103a88e95627eac64ab0","city":"石家庄市","district":"井陉县","province":"河北省"},{"_id":"5eba103a88e95627eac64ab4","city":"天津市区","district":"和平区","province":"天津市"},{"_id":"5eba103a88e95627eac64ab7","city":"北京市区","district":"大兴区","province":"北京市"},{"_id":"5eba103a88e95627eac64aba","city":"石家庄市","district":"无极县","province":"河北省"},{"_id":"5eba103a88e95627eac64ac5","city":"北京市区","district":"东城区","province":"北京市"},{"_id":"5eba103a88e95627eac64acb","city":"天津市区","district":"南开区","province":"天津市"},{"_id":"5eba103a88e95627eac64acd","city":"天津市区","district":"静海区","province":"天津市"},{"_id":"5eba103b88e95627eac64ad8","city":"石家庄市","district":"元氏县","province":"河北省"},{"_id":"5eba103b88e95627eac64adb","city":"石家庄市","district":"高邑县","province":"河北省"},{"_id":"5eba103b88e95627eac64aea","city":"石家庄市","district":"灵寿县","province":"河北省"},{"_id":"5eba103b88e95627eac64aec","city":"石家庄市","district":"深泽县","province":"河北省"},{"_id":"5eba103b88e95627eac64aee","city":"唐山市","district":"路北区","province":"河北省"},{"_id":"5eba103b88e95627eac64af1","city":"石家庄市","district":"赞皇县","province":"河北省"},{"_id":"5eba103b88e95627eac64b02","city":"石家庄市","district":"赵县","province":"河北省"},{"_id":"5eba103b88e95627eac64b04","city":"石家庄市","district":"裕华区","province":"河北省"},{"_id":"5eba103b88e95627eac64b06","city":"石家庄市","district":"正定县","province":"河北省"},{"_id":"5eba103b88e95627eac64b0f","city":"石家庄市","district":"新乐市","province":"河北省"},{"_id":"5eba103b88e95627eac64b11","city":"石家庄市","district":"辛集市","province":"河北省"},{"_id":"5eba103b88e95627eac64b19","city":"石家庄市","district":"藁城区","province":"河北省"},{"_id":"5eba103b88e95627eac64b1b","city":"唐山市","district":"古冶区","province":"河北省"},{"_id":"5eba103b88e95627eac64b1d","city":"石家庄市","district":"行唐县","province":"河北省"},{"_id":"5eba103b88e95627eac64b20","city":"唐山市","district":"路南区","province":"河北省"},{"_id":"5eba103b88e95627eac64b23","city":"唐山市","district":"开平区","province":"河北省"},{"_id":"5eba103b88e95627eac64b26","city":"石家庄市","district":"平山县","province":"河北省"},{"_id":"5eba103b88e95627eac64b28","city":"石家庄市","district":"鹿泉区","province":"河北省"},{"_id":"5eba103b88e95627eac64b2b","city":"石家庄市","district":"晋州市","province":"河北省"},{"_id":"5eba103b88e95627eac64b2f","city":"石家庄市","district":"栾城区","province":"河北省"},{"_id":"5eba103b88e95627eac64b40","city":"天津市区","district":"滨海新区","province":"天津市"},{"_id":"5eba103b88e95627eac64b42","city":"天津市区","district":"红桥区","province":"天津市"},{"_id":"5eba103b88e95627eac64b4a","city":"天津市区","district":"东丽区","province":"天津市"},{"_id":"5eba103b88e95627eac64b5e","city":"石家庄市","district":"新华区","province":"河北省"},{"_id":"5eba103b88e95627eac64b60","city":"石家庄市","district":"井陉矿区","province":"河北省"},{"_id":"5eba103b88e95627eac64b6e","city":"天津市区","district":"武清区","province":"天津市"},{"_id":"5eba103b88e95627eac64b7a","city":"张家口市","district":"崇礼区","province":"河北省"},{"_id":"5eba103b88e95627eac64b7c","city":"张家口市","district":"康保县","province":"河北省"},{"_id":"5eba103b88e95627eac64b7e","city":"张家口市","district":"万全区","province":"河北省"},{"_id":"5eba103b88e95627eac64b82","city":"张家口市","district":"张北县","province":"河北省"},{"_id":"5eba103b88e95627eac64b84","city":"张家口市","district":"宣化区","province":"河北省"},{"_id":"5eba103b88e95627eac64b86","city":"张家口市","district":"桥东区","province":"河北省"},{"_id":"5eba103b88e95627eac64b89","city":"张家口市","district":"下花园区","province":"河北省"},{"_id":"5eba103b88e95627eac64b99","city":"张家口市","district":"阳原县","province":"河北省"},{"_id":"5eba103b88e95627eac64b9b","city":"张家口市","district":"赤城县","province":"河北省"},{"_id":"5eba103b88e95627eac64b9d","city":"张家口市","district":"蔚县","province":"河北省"},{"_id":"5eba103c88e95627eac64bac","city":"承德市","district":"鹰手营子矿区","province":"河北省"},{"_id":"5eba103c88e95627eac64bae","city":"承德市","district":"双滦区","province":"河北省"},{"_id":"5eba103c88e95627eac64bb1","city":"承德市","district":"双桥区","province":"河北省"},{"_id":"5eba103c88e95627eac64bb4","city":"承德市","district":"宽城满族自治县","province":"河北省"},{"_id":"5eba103c88e95627eac64bb7","city":"承德市","district":"隆化县","province":"河北省"},{"_id":"5eba103c88e95627eac64bcb","city":"唐山市","district":"滦县","province":"河北省"},{"_id":"5eba103c88e95627eac64bce","city":"唐山市","district":"丰南区","province":"河北省"},{"_id":"5eba103c88e95627eac64bde","city":"唐山市","district":"乐亭县","province":"河北省"},{"_id":"5eba103c88e95627eac64be0","city":"唐山市","district":"丰润区","province":"河北省"},{"_id":"5eba103c88e95627eac64be2","city":"唐山市","district":"滦南县","province":"河北省"},{"_id":"5eba103c88e95627eac64bf0","city":"唐山市","district":"曹妃甸区","province":"河北省"},{"_id":"5eba103c88e95627eac64bf9","city":"秦皇岛市","district":"抚宁区","province":"河北省"},{"_id":"5eba103c88e95627eac64bfe","city":"秦皇岛市","district":"山海关区","province":"河北省"},{"_id":"5eba103c88e95627eac64c07","city":"秦皇岛市","district":"卢龙县","province":"河北省"},{"_id":"5eba103c88e95627eac64c0c","city":"秦皇岛市","district":"青龙满族自治县","province":"河北省"},{"_id":"5eba103c88e95627eac64c11","city":"秦皇岛市","district":"昌黎县","province":"河北省"},{"_id":"5eba103c88e95627eac64c23","city":"邯郸市","district":"邯山区","province":"河北省"},{"_id":"5eba103c88e95627eac64c27","city":"唐山市","district":"迁西县","province":"河北省"},{"_id":"5eba103c88e95627eac64c29","city":"秦皇岛市","district":"北戴河区","province":"河北省"},{"_id":"5eba103c88e95627eac64c2c","city":"秦皇岛市","district":"海港区","province":"河北省"},{"_id":"5eba103c88e95627eac64c2f","city":"唐山市","district":"迁安市","province":"河北省"},{"_id":"5eba103c88e95627eac64c42","city":"太原市","district":"小店区","province":"山西省"},{"_id":"5eba103c88e95627eac64c46","city":"太原市","district":"晋源区","province":"山西省"},{"_id":"5eba103c88e95627eac64c4a","city":"太原市","district":"清徐县","province":"山西省"},{"_id":"5eba103c88e95627eac64c4d","city":"衡水市","district":"武邑县","province":"河北省"},{"_id":"5eba103c88e95627eac64c4f","city":"太原市","district":"尖草坪区","province":"山西省"},{"_id":"5eba103c88e95627eac64c51","city":"衡水市","district":"故城县","province":"河北省"},{"_id":"5eba103c88e95627eac64c55","city":"衡水市","district":"景县","province":"河北省"},{"_id":"5eba103c88e95627eac64c59","city":"唐山市","district":"遵化市","province":"河北省"},{"_id":"5eba103c88e95627eac64c5b","city":"衡水市","district":"武强县","province":"河北省"},{"_id":"5eba103c88e95627eac64c5d","city":"衡水市","district":"安平县","province":"河北省"},{"_id":"5eba103c88e95627eac64c5f","city":"太原市","district":"杏花岭区","province":"山西省"}],"result_code":"success","result_des":"查找成功"}
 ```
 
